PIPE-76: Live camera translation of UsdGeomCamera (#839)
* Added first pass at a camera proxy node.

* Added unit conversion for film size attributes.

* Clean up for readability.

* Put attributes into categories.

* Renamed to differentiate from ProxyALCamera which will inherit from this

* Only show one version of each attribute to avoid connection issues.

* Test for attribute variability to avoid writing out time samples.

* Added license header to new files.

* Added MTypeId for new node.

* Added documentation for camera proxy node.

* Added doxygen comments.

* Added unit tests for round-trip of attribute translation.

--- a/src/lib/AL_USDMaya/CMakeLists.txt
+++ b/src/lib/AL_USDMaya/CMakeLists.txt
@@ -109,6 +109,7 @@ list(APPEND AL_usdmaya_nodes_headers
         AL/usdmaya/nodes/ProxyDrawOverride.h
         AL/usdmaya/nodes/ProxyShape.h
         AL/usdmaya/nodes/ProxyShapeUI.h
+        AL/usdmaya/nodes/ProxyUsdGeomCamera.h
         AL/usdmaya/nodes/RendererManager.h
         AL/usdmaya/nodes/Transform.h
         AL/usdmaya/nodes/TransformationMatrix.h
@@ -128,6 +129,7 @@ list(APPEND AL_usdmaya_nodes_source
         AL/usdmaya/nodes/ProxyShape.cpp
         AL/usdmaya/nodes/ProxyShapeSelection.cpp
         AL/usdmaya/nodes/ProxyShapeUI.cpp
+        AL/usdmaya/nodes/ProxyUsdGeomCamera.cpp
         AL/usdmaya/nodes/RendererManager.cpp
         AL/usdmaya/nodes/Transform.cpp
         AL/usdmaya/nodes/TransformationMatrix.cpp
