fix for unit test crash

--- a/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
+++ b/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
@@ -39,6 +39,7 @@ list(APPEND AL_maya_test_source
         AL/usdmaya/nodes/test_ProxyShapeSelectabilityDB.cpp
         AL/usdmaya/nodes/proxy/test_PrimFilter.cpp
         AL/usdmaya/test_SelectabilityDB.cpp
+        AL/usdmaya/test_DiffGeom.cpp
         AL/usdmaya/test_DiffPrimVar.cpp
         AL/usdmaya/commands/test_TranslateCommand.cpp
         test_translators_AnimationTranslator.cpp
