PIPE-359: Added 'getUsdPrimFromMayaPath' and 'getMayaPathFromUsdPrim' functions and exposed to Python. (#888)

--- a/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
+++ b/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
@@ -109,3 +109,7 @@ add_test(
             ${CMAKE_INSTALL_PREFIX}
             ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+if(NOT SKIP_USDMAYA_TESTS)
+    add_subdirectory(AL/usdmaya/py)
+endif()
