Check that all_tests target exists before adding dependencies (#945)

--- a/src/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
+++ b/src/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
@@ -50,4 +50,6 @@ set_tests_properties(${USDTRANSACTION_PYTHON_TEST_NAME}
     ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/src:$ENV{PYTHONPATH}
 )
 
-add_dependencies(all_tests ${USDTRANSACTION_TEST_EXECUTABLE_NAME} ${USDTRANSACTION_PYTHON_LIBRARY_NAME})
+if (TARGET all_tests)
+  add_dependencies(all_tests ${USDTRANSACTION_TEST_EXECUTABLE_NAME} ${USDTRANSACTION_PYTHON_LIBRARY_NAME})
+endif()
