Fix OSS USD Transaction build #2 (#947)
* Check that all_tests target exists before adding dependencies

* add ref to include for OSS build

* use generic boost python

* Use boost python libraries variable

* add assetType metadata to OSS build

--- a/src/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
+++ b/src/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
@@ -22,7 +22,7 @@ target_link_libraries(${USDTRANSACTION_TEST_EXECUTABLE_NAME}
     arch
     usd
     vt
-    ALboost_python
+    ${boost_python_LIBRARIES}
     ${USDTRANSACTION_LIBRARY_NAME}
 )
 
