Squashed 'src/' changes from c56e5ef0..9e3b4d56
9e3b4d56 Merge pull request #153 from LumaPictures/pr/fix_DirectionalLight_updateUsdPrim_return
44ce80e3 Merge pull request #152 from LumaPictures/pr/select_render_guides
ffca0077 Merge pull request #154 from LumaPictures/pr/no_dummy_engine
d47c0192 Merge pull request #155 from LumaPictures/pr/fix_tests_USD_LIBRARY_DIR
4fd05a5b tests were using the string "USD_LIBRARY_DIR" instead of the variable
a7d5b3dc Methods to query information about renderer plugins are now static
5611e41d fix boolean return value of DirectionalLight::updateUsdPrim
9d681e9b if renderGuides are shown, they should be selectable

git-subtree-dir: src
git-subtree-split: 9e3b4d560629214e8f7677e9aa6a12bfa2603787

--- a/schemas/AL/usd/schemas/maya/tests/CMakeLists.txt
+++ b/schemas/AL/usd/schemas/maya/tests/CMakeLists.txt
@@ -32,5 +32,5 @@ install(TARGETS testMayaSchemas DESTINATION bin)
 add_test(
     NAME TestAdditionalSchemas
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMAND RunTests.sh ${CMAKE_INSTALL_PREFIX} USD_LIBRARY_DIR
+    COMMAND RunTests.sh ${CMAKE_INSTALL_PREFIX} ${USD_LIBRARY_DIR}
 )
