Build dev-adsk branch (#965)
* update dev-adsk to make it build

* fix up INSTALL_DIR_SUFFIX problem - not defined in AL Cmake chain

* remove ws

* comments

* re-organise symlinks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if(${MAYA_MAJOR_VERSION} GREATER 2018)
     set(UFE_LIB_ROOT $ENV{REZ_MAYADEVKIT_ROOT}/maya/devkitBase/devkit/ufe)
     set(UFE_INCLUDE_ROOT $ENV{REZ_MAYADEVKIT_ROOT}/maya/devkitBase/devkit/ufe)
 
-    list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/${SUBTREE_DIRECTORY}/cmake/modules)
+    list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/src/cmake/modules)
     message("UFE_LIB_ROOT=${UFE_LIB_ROOT}")
     add_definitions(-DWANT_UFE_BUILD)
     message(STATUS "UFE Build Enabled")
@@ -130,6 +130,8 @@ set(USDUTILS_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/usd
 set(MAYAUTILS_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/mayautils)
 set(USDMAYAUTILS_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/usdmayautils)
 set(MAYATEST_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/mayatest)
+
+set(INSTALL_DIR_SUFFIX src/plugin/al) #Autodesk use this in their INSTALL TARGET for plugins
 
 # pxrUsd translator uses this
 set(PROJECT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/${SUBTREE_DIRECTORY}")
