--- a/plugin/al/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
+++ b/plugin/al/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
@@ -48,8 +48,9 @@ add_test(
 
 set_tests_properties(${USDTRANSACTION_PYTHON_TEST_NAME}
   PROPERTIES
-    ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/src:$ENV{PYTHONPATH}
+    ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/usdtransaction:${CMAKE_BINARY_DIR}/src:$ENV{PYTHONPATH} 
 )
+
 
 if (TARGET all_tests)
   add_dependencies(all_tests ${USDTRANSACTION_TEST_EXECUTABLE_NAME} ${USDTRANSACTION_PYTHON_LIBRARY_NAME})
