--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ set(MAYAUTILS_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/ma
 set(USDMAYAUTILS_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/usdmayautils)
 set(MAYATEST_INCLUDE_LOCATION ${CMAKE_CURRENT_LIST_DIR}/${SUBTREE_DIRECTORY}/mayatest)
 
-set(INSTALL_DIR_SUFFIX src/plugin/al) #Autodesk use this in their INSTALL TARGET for plugins
+set(INSTALL_DIR_SUFFIX .) #Autodesk use this in their INSTALL TARGET for plugins
 
 # pxrUsd translator uses this
 set(PROJECT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/${SUBTREE_DIRECTORY}")
