--- a/src/plugin/al/usdtransaction/AL/usd/transaction/CMakeLists.txt
+++ b/src/plugin/al/usdtransaction/AL/usd/transaction/CMakeLists.txt
@@ -70,6 +70,7 @@ target_compile_definitions(${USDTRANSACTION_PYTHON_LIBRARY_NAME}
 target_include_directories(${USDTRANSACTION_PYTHON_LIBRARY_NAME} 
   PUBLIC
     ${USDTRANSACTION_INCLUDE_LOCATION} 
+    ${USD_INCLUDE_DIRS}
 )
 
 target_link_libraries(${USDTRANSACTION_PYTHON_LIBRARY_NAME}
