--- a/src/plugin/al/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
+++ b/src/plugin/al/usdtransaction/AL/usd/transaction/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ target_include_directories(${USDTRANSACTION_TEST_EXECUTABLE_NAME}
     ${GTEST_INCLUDE_DIRS}
   PUBLIC 
     ${USDTRANSACTION_INCLUDE_LOCATION}
+    ${USD_INCLUDE_DIR}
 )
 
 add_test(
