--- a/src/plugin/al/usdtransaction/AL/usd/transaction/CMakeLists.txt
+++ b/src/plugin/al/usdtransaction/AL/usd/transaction/CMakeLists.txt
@@ -39,6 +39,7 @@ target_compile_definitions(${USDTRANSACTION_LIBRARY_NAME}
 target_include_directories(${USDTRANSACTION_LIBRARY_NAME} 
   PUBLIC
     ${USDTRANSACTION_INCLUDE_LOCATION} 
+    ${USD_INCLUDE_DIR}
 )
 
 target_link_libraries(${USDTRANSACTION_LIBRARY_NAME}
@@ -70,6 +71,7 @@ target_compile_definitions(${USDTRANSACTION_PYTHON_LIBRARY_NAME}
 target_include_directories(${USDTRANSACTION_PYTHON_LIBRARY_NAME} 
   PUBLIC
     ${USDTRANSACTION_INCLUDE_LOCATION} 
+    ${USD_INCLUDE_DIR}
 )
 
 target_link_libraries(${USDTRANSACTION_PYTHON_LIBRARY_NAME}
