Fixed bug where matrix value was not pulling the data from the correct time value.
Please enter the commit message for your changes. Lines starting

--- a/plugin/al/lib/AL_USDMaya/CMakeLists.txt
+++ b/plugin/al/lib/AL_USDMaya/CMakeLists.txt
@@ -165,6 +165,7 @@ target_compile_definitions(${LIBRARY_NAME}
     PRIVATE
         ${_macDef}
         AL_MAYA_MACROS_EXPORT
+        WANT_UFE_BUILD=1
         AL_USDMAYA_EXPORT
         AL_USDMAYA_LOCATION_NAME="${AL_USDMAYA_LOCATION_NAME}"
 )
@@ -217,6 +218,9 @@ target_link_libraries(${LIBRARY_NAME}
 )
 
 if(UFE_FOUND)
+    target_compile_definitions(${LIBRARY_NAME}
+        PRIVATE
+            WANT_UFE_BUILD=1)
     target_link_libraries(${LIBRARY_NAME} ${UFE_LIBRARY})
 endif()
 
